0.4 (unreleased)
----------------

- Add new command ``pyramid-chameleon-precompile``.

- Update the repo to standards.  See
  https://github.com/Pylons/pyramid_chameleon/issues/22

- Add support for Python 3.5, 3.6, and 3.7

- Remove support for Python 2.6, 3.2, and 3.3.

- Add support for PyPy3.

- Ensure we can build when CHANGES.txt and README.rst cannot be found by
  setup.py.

0.3 (2014-07-01)
----------------

- Remove dependency on ``pyramid.interfaces.ITemplateRenderer`` (which is
  deprecated in Pyramid > 1.5).

- Update Trove classifiers and tests to support Python 3.4.

0.2 (2014-02-09)
----------------

- Drop dependency on ``nose-selecttests``.

0.1 (2013-09-07)
----------------

-  Initial version